--- a/src/components/Licensing.css
+++ b/src/components/Licensing.css
@@ -26,7 +26,7 @@
   }
 }
 
-@media (max-width: 350px) {
+@media (max-width: 767px) {
   .licensing-cards {
     display: none;
   }
